fixed alignment for content

--- a/css/index.css
+++ b/css/index.css
@@ -144,7 +144,7 @@ header .header1, .header2{
 }
 
 h1 {
-	font-size: 500%;
+	font-size: 8rem;
 }
 
 button {
@@ -171,111 +171,31 @@ button:hover {
 
 hr {
 	border: 1px solid black;
-	margin: 2%;
 }
 
 /* CONTENT */
 
-
-
-
-h2 {
-	text-decoration: underline;
-
+.contentContainer h2, p {
+    font-size: 2rem;
 }
 
-h2, p {
-	background-color: lightblue;
-	border: 1px solid black;
-}
+.middle-img {
+    width: 90%;
+    border: 1px solid white;
+    outline: 1px solid black;
 
-img.middle-img {
-	width: 100%;
-	margin: 1% 0; 
-	border: 2px solid yellow;
-	outline: 2px solid black;
-}
-
-.bottomContent {
-	display: flex;
-	justify-content: space-around;
-	width: 100%;
-}
-.bottomContent div {
-	display: flex;
-	align-items: center;
-	flex-direction: column;
-	text-align: center;
-	width: 30%;
-}
-
-.bottomContent h2 {
-	width: 50%;
 }
 
 
 /* FOOTER */
 address {
-	display: flex;
-	flex-direction: column;
-	justify-content: flex-start;
-	align-items: center;
-	width: 25%;
-}
-
-address h2 {
-	width: auto;
-}
-
-
-footer {
-	display: flex;
-	justify-content: center;
-	width: 100%;
-	margin: 1% 0;
-}
-
-footer p {
-	width: 100%;
-}
-
-.contactContainer {
-	background-color: lightblue;
-	border: 1px solid black;
-	padding: 1%;
+    font-size: 2rem;
 }
 
 b {
 	font-weight: bold;
 }
 
-/* CONTACT FORM */
-
-form div{
-	display: flex;
-	flex-direction: column;
-	width: 100%;
-	align-items: center;
-}
-
-.submit {
-	background-color: lightblue;
-	border: 1px solid black;
-	box-shadow: 2px 2px darkblue;
-	font-size: 20px;
-	text-shadow: 1px 1px yellow;
-	text-shadow: 1px 1px 1px yellow;
-	font-family: 'Carter One', cursive;
-	transition: 1s;
-}
-
-.submit:hover {
-	background-color: dodgerblue;
-	color: white;
-	text-shadow: 2px 2px black;
-	text-shadow: 2px 2px 2px black;
-	transition: 1s;
-}
 
 
 /* MEDIA QUERIES */
@@ -346,22 +266,21 @@ form div{
         display: block;
         width: 100%;
     }
-    .topContent {
-        width: 90%;
-    }
 
-    .topContent div {
-        width: 90%;
-    }
-
-    .topContent h2, p {
+    .contentContainer h2, p {
         text-align: left;
     }
 
-    .middle-img {
-        width: 5%;
+    .contentContainer div {
+        padding: 5%;
     }
 
+    .middle-img {
+        width: 90%;
+    }
 
-    
+    /* FOOTER */
+   address h2, div{
+       text-align: left;
+   }
 }
